# zammy-package

./: .gitignore  manage.py  requirements.txt  setup.cfg
test/: settings.py
zammy_packages/: urls.py
zammy_packages/account/: apps.py  models.py  urls.py  views.py
zammy_packages/account/migrations/: 0001_initial.py  0002_zammyaccount_login_type_alter_zammyaccount_email_and_more.py  0003_alter_zammyaccount_username.py
zammy_packages/graphql/account/: mutation.py  query.py
zammy_packages/graphql/core/: authentication.py  decorators.py  mutations.py
zammy_packages/graphql/view_count/: type.py  types.py  views.py
zammy_packages/view_count/: admin.py  apps.py  models.py
zammy_packages/view_count/migrations/: 0001_initial.py  0002_auto_20231129_0736.py
